# CC-Optimizer

./: .gitignore  .public-repo  AGENTS.md  BOUNTY.md  CLAUDE.md  README.md  main-thread-kickoff.md  subthread-brief.md
.claude/: settings.json
.claude/agents/: docs-reference.md  workspace-analyzer.md
.claude/hooks/: grep-wiki-reminder.py  push-review.py
.codex/: hooks.json
configs/: projects.example.json  user-config.example.json
docs/: manifest.json  plugin-marketplace-reference.md
fan-out/: .gitignore  categorize.py  clone-github-repos.py  config.py  discovery.py  discovery_continuous.py  document-raw.py  document-workspaces.py  init-workspaces.py  migrate.py  optimize-workspaces.py  orchestrator.py  portfolio-seed.py  project-metrics.py  workspace-init-plan.md
playbook/: cheatsheet.md  cicd-strategy.md  optimization-checklist.md  patterns.md  roadmap.md
scripts/: approve-tickets.py  codex-review.sh  delete-nul-files.py  migrate-sessions.py  pre-reset-audit.ps1  push-review.py  rollout-wiki-sync.py  scrub-session-surrogates.py  setup.py  sweep-stale-brokers.sh  sync-docs.py  verified-commit.sh  wiki-migrate.py
templates/: BOUNTY.md  deploy-user-settings.py  main-thread-kickoff.md  subthread-brief.md  tmux.conf  usb-git-sync.py  user-settings.json
templates/ci/gitea-mcp/: mcp_server.py  pyproject.toml
templates/ci/gitea-mcp/gitea_mcp/: __init__.py  cli.py  client.py  models.py
wiki/: .public-repo  Getting-Started.md  Health-Check-Standard.md  Home.md  Optimizing-Workspaces.md  Patterns-Catalog.md  Repository-Structure.md  Skills-Reference.md
(+117 files in other folders)
